--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
     <artifactId>easytoolsoft-report</artifactId>
     <packaging>pom</packaging>
     <version>0.0.1-SNAPSHOT</version>
+    <description>A web Reporting generate engine components</description>
+    <url>http://www.easytoolsoft.com/</url>
     <properties>
         <project.github.group>https://github.com/easytoolsoft</project.github.group>
         <project.github.url>https://github.com/easytoolsoft/easytoolsoft-report.git</project.github.url>
@@ -20,6 +22,24 @@
         <module>easytoolsoft-report-engine</module>
         <module>easytoolsoft-report-queryer</module>
     </modules>
+    <build>
+        <sourceDirectory>src/main/java</sourceDirectory>
+        <testSourceDirectory>src/test/java</testSourceDirectory>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
     <inceptionYear>2017</inceptionYear>
     <developers>
         <developer>
@@ -37,28 +57,12 @@
         </developer>
     </developers>
     <scm>
-        <connection>${project.github.url}</connection>
-        <developerConnection>${project.github.url}</developerConnection>
-        <url>${project.github.group}</url>
+        <connection>scm:git:${project.github.url}</connection>
+        <developerConnection>scm:git:${project.github.url}</developerConnection>
+        <url>${project.github.url}</url>
     </scm>
     <organization>
         <name>easytoolsoft Inc.</name>
         <url>http://www.easytoolsoft.com/</url>
     </organization>
-    <ciManagement>
-        <system></system>
-        <url></url>
-    </ciManagement>
-    <distributionManagement>
-        <repository>
-            <id>maven-releases</id>
-            <name>Nexus Release Repository</name>
-            <url>http://nexus.easytoolsoft-inc.com/repository/maven-releases/</url>
-        </repository>
-        <snapshotRepository>
-            <id>maven-snapshots</id>
-            <name>Nexus Snapshot Repository</name>
-            <url>http://nexus.easytoolsoft-inc.com/repository/maven-snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>
 </project>
